# NVRTool

./: .buildinfo  .editorconfig  .gitignore  CHANGELOG.html  CHANGELOG.md  CMakeLists.txt  FireData.cpp  FireMsgView.cpp  FireMsgView.h  FireVideo.cpp  FireVideoDlg.cpp  FireVideoView.h  LT_WXCL.sln  LT_WXCLCFG.ini  ManageDlg.cpp  ManageView.cpp  README.md  TaiYuan-SS4.sln  VERSION.md  VideoDlg.cpp  VideoPlay.h  WaitDlg.h  api.html  build-release.py  build.ps1  build_debug.py  build_installer.py  build_release.py  build_test.ps1  ci_build.ps1  ci_prebuild.ps1  cmake_afterbuild.ps1  cmake_build.ps1  cmake_build_test.ps1  copy.py  gen_installer_script.py  genindex.html  get_version.py  grid.html  index.html  (+21 more)
.github/workflows/: Windows-Qt-Debug.yml  Windows-plugin.yml  Windows.yml  cmake.yml  copydeps.ps1  documentation.yml  msbuild.yml
LT_WXCL/: .editorconfig  CHANGELOG.md  CMakeLists.txt  Date.cpp  Date.h  DownloadDialog.cpp  DownloadDialog.h  FireData.cpp  FireData.h  FireMsgDlg.cpp  FireMsgDlg.h  FireMsgView.cpp  HeaderCtrlCl.cpp  HeaderCtrlCl.h  JcgkDlg.cpp  JcgkDlg.h  LT_LCWB_1A.cpp  LT_LCWB_1A.h  LT_LCWB_1ADlg.cpp  LT_LCWB_1ADlg.h  LT_LCWB_1AView.cpp  LT_LCWB_1AView.h  LT_WXCL.rc  LT_WXCL.vcxproj  LT_WXCLCFG.ini  ListCtrlCl.cpp  ListCtrlCl.h  LogDlg.cpp  LogView.cpp  LogView.h  ManageDlg.cpp  ManageDlg.h  ManageView.cpp  ManageView.h  MyButton.cpp  MyButton.h  MyMeter.cpp  MyMeter.h  MyTabCtrl.cpp  MyTabCtrl.h  (+36 more)
LT_WXCL/include/: HCNetSDK.h  VideoPlay.h
LT_WXCL/lib/: PlayCtrl.lib
LT_WXCL/res/: LT_WXCL.rc2
LT_WXCL_Dll/: LT_WXCLCFG.ini
MyTest/: MyTest.vcxproj  test.cpp  test_version.cpp
PythonScripts/: .gitignore  check_disk.py  client.py  copy_file.py  copy_file_impl.py  get_files.py  launcher.py  mainwindow.ui  minimized_window.ui  parse_config.py  requirements.txt  tasks.py  test-path.py  test.ini  update-profile.py
Scripts/: afterbuild.ps1  build.ps1  clean.ps1  cmake_afterbuild.ps1  cmake_afterbuild_test.ps1  cmake_build.ps1  config.ps1  configure.ps1  fix-plugin.ps1  install_qt.ps1  prebuild.ps1  vscode_build.ps1  vscode_build_test.ps1
_modules/: index.html
_modules/tabs/device/: DiskStatusServer.html
_sources/: api.rst.txt  旧的文档.md.txt
_static/: documentation_options.js
archive/: FUNCTIONS.md  FireMsgDlg.cpp  FireMsgDlg.h  HeaderCtrlCl.cpp  LogDlg.cpp  MyButton.h  MyTabCtrl.cpp  WaitDlg.cpp
archive/nsis/: installer.pre.nsi
docs/: CHANGELOG.md  api.rst  check_disk.rst  conf.py  copy_file.rst  delete_file.rst  delete_file_test.rst  get_files.rst  grid.ipynb  index.rst  launcher.rst  license_util.rst  parse_config.rst  record.ipynb  server.rst  tasks.rst  update_profile.rst  旧的文档.md
old/: CMakeLists.txt  FireVideoView.cpp  ListCtrlCl.cpp  ListCtrlCl.h  ManageDlg.cpp  VideoDlg.h  log.h  resource.h
plugin/: CMakeLists.txt  stream_lib.cpp  tax_lib.cpp
pysrc/: Default.ini  README.md  copy_file.py  launcher.py  service.py  程序配置.ini
src/: CHANGELOG.md  CMakeLists.txt  FireData.cpp  FireData.h  FireMsgDlg.cpp  FireMsgDlg.h  FireMsgView.cpp  FireMsgView.h  FireVideo.cpp  FireVideo.h  FireVideo.rc  FireVideoDlg.cpp  FireVideoDlg.h  FireVideoView.cpp  FireVideoView.h  HeaderCtrlCl.h  ListCtrlCl.cpp  LogDlg.cpp  LogDlg.h  LogView.cpp  LogView.h  ManageDlg.cpp  ManageDlg.h  ManageView.cpp  ManageView.h  MyButton.cpp  MyTabCtrl.h  TaxData.cpp  TaxData.h  VideoDlg.cpp  VideoPlay.cpp  VideoPlayWnd.cpp  VideoPlayWnd.h  WaitDlg.cpp  cmake_afterbuild.ps1  cmake_afterbuild_test.ps1  config.h  config.json  hdd_state.h  http_get.cpp  (+7 more)
src/configurations/: 程序配置.ini
src/cpp/: CMakeLists.txt  serial_lib.cpp  tax_lib.cpp
src/python/: config.json  main.py
src/python/tabs/: MainTab.py  MainWindow.py  stop_button.py
src/python/tabs/device/: DeviceStatus.py  DeviceTab.py  DiskStatusServer.py  RecordTab.py  tableview.py
src/python/tabs/event/: EventsTab.py
src/python/tabs/sensor/: SensorTab.py
src/python/tabs/video/: Color.py  VideoFrame.py  VideoGrid.py  VideoTab.py  tab2.py
src/qt/: CMakeLists.txt  build.ps1  input.txt  main.cpp  main.qrc
src/tabs/: MainTab.py  MainWindow.py  stop_button.py
src/tabs/device/: DeviceTab.py  DiskStatusServer.py
src/tabs/event/: EventsTab.py
src/tabs/sensor/: SensorTab.py
src/tabs/video/: BottomBar.py  VideoFrame.py  VideoGrid.py  VideoTab.py
test/: create_vdisk.txt  delete_file_test_d.py  env_test.py  env_test_gui.py  image_compare.py  lib_import_test.py  license-下载.txt  license-录像.txt  license_util.py  pos.py  render_delay.py  serial_test_d.py  serial_util.py  stream_lib_mocked.py  stream_test.py  tax_test_d.py
tests/: CopyFile.ui  build.py  conf_test.py  create_test_files.py  create_vdisk.txt  delete_file_test.py  detach_vdisk.txt  record_test.py  test_serial.py  test_stream.py  test_tax.py
