set(SRCS
"config.h"
"Date.cpp"
"Date.h"
"FireData.cpp"
"FireData.h"
"FireMsgDlg.cpp"
"FireMsgDlg.h"
"FireMsgView.cpp"
"FireMsgView.h"
"hdd_state.h"
"HeaderCtrlCl.cpp"
"HeaderCtrlCl.h"
"http_get.cpp"
"http_get.h"
"JcgkDlg.cpp"
"ListCtrlCl.cpp"
"ListCtrlCl.h"
"log.cpp"
"log.h"
"LogDlg.cpp"
"LogDlg.h"
"LogView.cpp"
"LogView.h"
"LT_LCWB_1A.cpp"
"LT_LCWB_1A.h"
"LT_LCWB_1ADlg.cpp"
"LT_LCWB_1ADlg.h"
"LT_LCWB_1AView.cpp"
"LT_LCWB_1AView.h"
"LT_WXCL.APS"
"LT_WXCL.rc"
"ManageDlg.cpp"
"ManageDlg.h"
"ManageView.cpp"
"ManageView.h"
"MyButton.cpp"
"MyButton.h"
"MyTabCtrl.cpp"
"MyTabCtrl.h"
"progress_bar.cpp"
"progress_bar.h"
"resource.h"
"stdafx.cpp"
"stdafx.h"
"targetver.h"
"TaxData.cpp"
"TaxData.h"
"util.cpp"
"util.h"
"VideoDlg.cpp"
"VideoDlg.h"
"VideoPlayWnd.cpp"
"VideoPlayWnd.h"
"WaitDlg.cpp"
"WaitDlg.h"
)

add_executable(FireVideo WIN32 ${SRCS})
