set(SRCS
"config.h"
"Date.cpp"
"Date.h"
"FireData.cpp"
"FireData.h"
"FireMsgDlg.cpp"
"FireMsgDlg.h"
"FireMsgView.cpp"
"FireMsgView.h"
"hdd_state.h"
"HeaderCtrlCl.cpp"
"HeaderCtrlCl.h"
"http_get.cpp"
"http_get.h"
"ListCtrlCl.cpp"
"ListCtrlCl.h"
"log.cpp"
"log.h"
"LogDlg.cpp"
"LogDlg.h"
"LogView.cpp"
"LogView.h"
"LT_LCWB_1A.cpp"
"LT_LCWB_1A.h"
"LT_LCWB_1ADlg.cpp"
"LT_LCWB_1ADlg.h"
"LT_LCWB_1AView.cpp"
"LT_LCWB_1AView.h"
"LT_WXCL.APS"
"LT_WXCL.rc"
"ManageDlg.cpp"
"ManageDlg.h"
"ManageView.cpp"
"ManageView.h"
"MyButton.cpp"
"MyButton.h"
"MyTabCtrl.cpp"
"MyTabCtrl.h"
"progress_bar.cpp"
"progress_bar.h"
"resource.h"
"stdafx.cpp"
"stdafx.h"
"targetver.h"
"TaxData.cpp"
"TaxData.h"
"util.cpp"
"util.h"
"VideoDlg.cpp"
"VideoDlg.h"
"VideoPlayWnd.cpp"
"VideoPlayWnd.h"
"WaitDlg.cpp"
"WaitDlg.h"
)
include_directories("include" "D:/boost_1_78_0")
link_directories("lib" "D:/boost_1_78_0/stage/lib")

find_package(fmt CONFIG REQUIRED)
add_executable(FireVideo WIN32 ${SRCS})
target_link_libraries(FireVideo PRIVATE fmt::fmt VideoPlay HCNetSDK)
set_target_properties(FireVideo PROPERTIES COMPILE_FLAGS "/EHsc")
